Chapter 3: Adding CSS

--- a/financing.html
+++ b/financing.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Prime Properties | Financing</title>
+<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -30,7 +31,7 @@
 	</main>
 	<footer>
 		<div>
-			<p>Copyright &copy; 2014 Prime Properties</p>
+			<p >Copyright &copy; 2014 Prime Properties</p>
 			<a href="mailto:support@timmithy.net">support@timmithy.netv </a>
 		</div>
 	</footer>
