--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Prime Properties</title>
+<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -25,7 +26,7 @@
 			<li>features</li>
 		</ul>
 		<div>
-			<p>Prime Properties<br>3055 Bode Road<br>Schaumburg, IL 60194<br><br>847-555-5555</p>		
+			<p class="contact">Prime Properties<br>3055 Bode Road<br>Schaumburg, IL 60194<br><br>847-555-5555</p>		
 		</div>
 	</main>
 	<footer>
